--- a/index.html
+++ b/index.html
@@ -49,13 +49,19 @@
     </div>
     <p>
         For this exercise, I would first refactor the code to make it more DRY. I found that I had a lot of repetitive code, especially when populating the contents of the calendar. It is not possible to add dynamically add divs, and manipulate the contents of
-        those divs. Therefore, I had to add each div in the html file. I, also need to separate the code into functions to make it more readable. So that others can see the process.
+        the dynamically added divs. Therefore, I had to add each week div in the html file. I, also need to separate the code into functions to make it more readable. So that others can see the process.
         <p>
-            I would rather use React or JQuery to render the contents of the calendar. I could have a week component that would render for each week of the month. It would be a lot easier to maintain, and add to.
+            I would  use React to render the contents of the calendar. I could separate the components so it's easier to create a single component to be used for each week. And if this calendar needed to be expanded, it would be easy for a dev that is experienced react to add features to it. It would be more maintainable because it has a set structure.
         </p>
 
         <p>
             I did not quite find the proper font that matches the design, or the gray color for the buttons, underline, and border around the calendar. And I am not sure if the spacing between elements is correct.
+        </p>
+        <p>
+            Utilized the prettier extension to clean up the formatting.
+        </p>
+        <p>
+            Add aria labels to make the calendar more accessible.
         </p>
 
 </body>
