updated the notes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         For this exercise, I would first refactor the code to make it more DRY. I found that I had a lot of repetitive code, especially when populating the contents of the calendar. It is not possible to add dynamically add divs, and manipulate the contents of
         the dynamically added divs. Therefore, I had to add each week div in the html file. I, also need to separate the code into functions to make it more readable. So that others can see the process.
         <p>
-            I would  use React to render the contents of the calendar. I could separate the components so it's easier to create a single component to be used for each week. And if this calendar needed to be expanded, it would be easy for a dev that is experienced react to add features to it. It would be more maintainable because it has a set structure.
+            I would  use React to render the contents of the calendar. I could separate the week, calendar, and arrows into their own components. If this calendar needed to be expanded, it would be easy for a dev that is experienced in react to add features to it. It would be more maintainable because it has a set structure.
         </p>
 
         <p>
@@ -63,7 +63,8 @@
         <p>
             Add aria labels to make the calendar more accessible.
         </p>
-
+       <p>
+       </p>
 </body>
 
 </html>
